@@ -1,6 +1,6 @@
 .\" $Id$
 .\"
-.TH DHCPCD 8 "12 February 2007" "dhcpcd 3.0"
+.TH DHCPCD 8 "27 February 2007" "dhcpcd 3.0"
 
 .SH NAME
 dhcpcd \- DHCP client daemon
@@ -110,7 +110,9 @@ that the server can override this value if it sees fit). This value is
 used in the
 .B DHCP_DISCOVER
 message. Use -1 for an infinite lease time. We don't request a specific
-lease time by default.
+lease time by default. If we do not receive a lease time in the
+.B DHCP_OFFER
+message then we default to 1 hour.
 .TP
 .BI \-m \ metric
 Routes will be added with the given metric. The default is 0.
@@ -142,7 +144,9 @@ is stopped it can no longer down an interface at the end of its
 lease period when the lease is not renewed.
 .TP
 .BI \-s \ ipaddr
-Sends DHCP_REQUEST message requesting to lease IP address ipaddr.
+Sends
+.B DHCP_REQUEST
+message requesting to lease IP address ipaddr.
 The ipaddr parameter must be in the form xxx.xxx.xxx.xxx.
 This effectively doubles the timeout period, as if we fail to get
 this IP address then we enter the INIT state and try to get any
@@ -322,7 +326,6 @@ RFC2132
 draft-ietf-dhc-fqdn-option
 
 .SH BUGS
-Probably many.
 Please report them to http://bugs.gentoo.org.
 .PD 0
 
